RESOLVED FIXED219270
Reflect.preventExtensions should not throw if called on WindowProxy or Location
https://bugs.webkit.org/show_bug.cgi?id=219270
Summary Reflect.preventExtensions should not throw if called on WindowProxy or Location
Alexey Shvayka
Reported 2020-11-23 21:10:05 PST
Reflect.preventExtensions should not throw if called on WindowProxy or Location
Attachments
Patch (11.34 KB, patch)
2020-11-23 23:20 PST, Alexey Shvayka
no flags
Patch (13.73 KB, patch)
2020-12-04 12:21 PST, Alexey Shvayka
no flags
Alexey Shvayka
Comment 1 2020-11-23 23:20:39 PST
EWS Watchlist
Comment 2 2020-11-25 19:23:25 PST
This patch modifies the imported WPT tests. Please ensure that any changes on the tests (not coming from a WPT import) are exported to WPT. Please see https://trac.webkit.org/wiki/WPTExportProcess
Radar WebKit Bug Importer
Comment 3 2020-11-30 21:11:30 PST
Yusuke Suzuki
Comment 4 2020-12-03 14:23:56 PST
Comment on attachment 414822 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=414822&action=review Can you check test failures? > LayoutTests/imported/w3c/ChangeLog:13 > + * web-platform-tests/html/browsers/history/the-location-interface/location-prevent-extensions-expected.txt: Added. > + * web-platform-tests/html/browsers/history/the-location-interface/location-prevent-extensions.html: Added. > + * web-platform-tests/html/browsers/origin/cross-origin-objects/cross-origin-objects-expected.txt: > + * web-platform-tests/html/browsers/origin/cross-origin-objects/cross-origin-objects.html: > + * web-platform-tests/html/browsers/the-windowproxy-exotic-object/windowproxy-prevent-extensions-expected.txt: Added. > + * web-platform-tests/html/browsers/the-windowproxy-exotic-object/windowproxy-prevent-extensions.html: Added. Are they imported tests from WPT via import-w3c-tests? If it is not, can you put them under http/wpt/? LayoutTests/imported is only for imported tests.
Alexey Shvayka
Comment 5 2020-12-03 14:36:20 PST
(In reply to Yusuke Suzuki from comment #4) > Can you check test failures? Failures are caused by error message change; will adjust soon. > Are they imported tests from WPT via import-w3c-tests? If it is not, can you > put them under http/wpt/? LayoutTests/imported is only for imported tests. These tests are new (not imported). I am putting them to LayoutTests/imported to leverage the WPT export process (https://trac.webkit.org/wiki/WPTExportProcess): once the patch is reviewed, I can land a WPT PR with those tests w/o additional review on GitHub (which saves a lot of time and lets us share the tests that Blink currently fails), and only then I would land the patch itself.
Alexey Shvayka
Comment 6 2020-12-04 12:21:31 PST
Created attachment 415444 [details] Patch Adjust expectations for error message change.
EWS
Comment 7 2020-12-11 12:40:05 PST
Committed r270702: <https://trac.webkit.org/changeset/270702> All reviewed patches have been landed. Closing bug and clearing flags on attachment 415444 [details].
Note You need to log in before you can comment on or make changes to this bug.